--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <header>
@@ -20,16 +21,16 @@
     </div>
     <div class = "right_section box ">
       <header class = "subtitle header h2 "><h2>Data results</header>
-      <div class="carousel">
-        div cl
+        <div class = "chart_container">
+          <canvas id="myChart"></canvas>
       </div>
       <div>
-        <p class = "box">Team of Conference </p>
+        <p class = "box">Team of Conference</p>
   </div>
   </div>
 </div>
 <div class="divisions box">
-  <form action="/api" method = "get" class = "division_form"></form>
+  <form action="/api" method = "get" class = "division_form">
   <div>
     <label for="division_form">First division</label>
     <select name="division" id="division1">
@@ -51,9 +52,9 @@
     <option value="Pacific">Pacific</option>
     <option value="Southwest">Southwest</option>
     </select>
-  </form>
   </div>
   <button class = "submit" id="comp_divs">Compare Divisions!</button>
+</form>
 </div>
 
 </div>
