--- a/Landingpage.html
+++ b/Landingpage.html
@@ -11,9 +11,9 @@
   <div class="overlay">
     <h1> NBA Strength Calculator</h1>
     <p> Get an instant ranking of team strength and more </p>
-    <a href="http://127.0.0.1:5500/index.html" target="_parent"><button>Click me !</button></a>
+    <a href="http://127.0.0.1:5500/index.html" target="_parent"><button class="btn">Click me !</button></a>
   </div>
 </header>
    
-    
+
  
